--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-server": "^20.0.0-next.0",
     "@angular/router": "^20.0.0-next.0",
     "@angular/ssr": "^20.0.0-next.2",
+    "@number-flow/react": "^0.5.8",
     "express": "^4.18.2",
+    "number-flow": "^0.5.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
