--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^20.0.0-next.0",
     "@angular/router": "^20.0.0-next.0",
     "@angular/ssr": "^20.0.0-next.2",
+    "@netlify/angular-runtime": "^2.3.1",
     "@number-flow/react": "^0.5.8",
     "express": "^4.18.2",
     "number-flow": "^0.5.6",
